@@ -1,3 +1,7 @@
+2008-02-23  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/po.rb: default view.
+
 2008-02-20  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/rs.rb: session manager.
